refactor(resources): 优化文件服务实现及请求ID过滤器
- 将FileController中的@Autowired替换为@Resource
- 使用StandardCharsets.UTF_8替代字符串形式的UTF-8编码
- 移除UUID.toString()中多余的toString()调用
- 重命名ImageTextServiceImpl和VideoServiceImpl包路径
- 在相关服务实现类中添加对应接口导入
- 修改RequestIdFilter日志和头部字段名称从X-SnowFlake到X-Request-Id